--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,171 @@
-.App {
-  text-align: center;
+* {
+  font-family: "poppins", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #d5dff5;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  margin: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.heading {
+  margin: 0;
+  padding: 0;
+  border-bottom: #ccc solid 1px;
+  padding-bottom: 10px;
+}
+
+/* Gallery */
+.gallery {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: 250px;
+  grid-auto-flow: dense;
+  grid-gap: 20px;
+}
+
+.gallery img {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+}
+
+.gallery .image-box:nth-child(11n + 1) {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.image-box:hover {
+  filter: brightness(0.4);
+  transition: 0.3s ease-in-out;
+}
+
+.image-box:hover .image-overlay {
+  opacity: 1;
+  transition: 0.3s ease-in-out;
+}
+
+.image-gallery .image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.5s ease;
+}
+
+.gallery .image-box:hover img {
+  transform: scale(1, 1);
+}
+
+.heading {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.btn {
+  background-color: #f44336;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  opacity: 0.9;
+}
+.image-container {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+
+.checkbox-label {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  background: rgb(51, 51, 240);
+  cursor: pointer;
+  display: none;
+}
+
+.checkmark {
+  position: absolute;
+  top: 11px;
+  left: 18px;
+  font-size: 20px;
+  display: none;
+}
+
+.image-container:hover,
+.image-container .checkbox:checked + .checkbox-label {
+  display: block;
+}
+
+.image-container .checkbox:checked + .checkbox-label + .checkmark {
+  display: block;
+  color: #e6ebee;
+}
+
+.custom-file-input {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  cursor: pointer;
+}
+
+.custom-file-input input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  cursor: pointer;
+}
+
+.custom-file-input .custom-file-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #ccc;
+  padding: 10px;
+  border-radius: 10px;
+  width: 200px;
+  height: 205px;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-file-input .custom-file-container .icon {
+  font-size: 30px;
+  margin-bottom: 20px;
 }
