--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,43 @@
 * {
-  font-family: "poppins", sans-serif;
   margin: 0;
   padding: 0;
 }
 
 body {
+  font-family: "poppins", sans-serif;
   background-color: #d5dff5;
-  position: relative;
 }
 
 .container {
   background-color: white;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 30px;
+  padding: 50px;
   margin: 30px;
 }
 
 .heading {
-  margin: 0;
-  padding: 0;
   border-bottom: #ccc solid 1px;
-  padding-bottom: 10px;
+  padding-bottom: 2%;
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Gallery */
 .gallery {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding-top: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-auto-rows: 250px;
-  grid-auto-flow: dense;
-  grid-gap: 20px;
+  padding: 2%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .gallery img {
-  position: relative;
-  overflow: hidden;
-  border: 1px solid #ccc;
+  width: 200px;
+  height: 250px;
+  margin-bottom: 5%;
   border-radius: 15px;
-}
-
-.gallery .image-box:nth-child(11n + 1) {
-  grid-column: span 2;
-  grid-row: span 2;
+  flex-basis: 25%;
+  border: 1px solid #dfc7c7;
+  border-radius: 15px;
 }
 
 .image-box:hover {
@@ -54,118 +45,43 @@ body {
   transition: 0.3s ease-in-out;
 }
 
-.image-box:hover .image-overlay {
-  opacity: 1;
-  transition: 0.3s ease-in-out;
-}
-
-.image-gallery .image-box img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: all 0.5s ease;
-}
-
-.gallery .image-box:hover img {
-  transform: scale(1, 1);
-}
-
-.heading {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: space-between;
-}
-
 .btn {
   background-color: #f44336;
   color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
+  padding: 15px;
   cursor: pointer;
-  opacity: 0.9;
+  border-radius: 5px;
+  border: 1px solid #f44336;
 }
-.image-container {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.checkbox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  cursor: pointer;
-  width: 20px;
-  height: 20px;
-}
-
-.checkbox-label {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  width: 20px;
-  height: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  background: rgb(51, 51, 240);
-  cursor: pointer;
-  display: none;
-}
-
-.checkmark {
-  position: absolute;
-  top: 11px;
-  left: 18px;
-  font-size: 20px;
-  display: none;
-}
-
-.image-container:hover,
-.image-container .checkbox:checked + .checkbox-label {
-  display: block;
-}
-
-.image-container .checkbox:checked + .checkbox-label + .checkmark {
-  display: block;
-  color: #e6ebee;
-}
-
-.custom-file-input {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  cursor: pointer;
+.btn:hover {
+  background-color: white;
+  color: #f44336;
+  border: 1px solid #f44336;
 }
 
 .custom-file-input input {
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-align: right;
+  position: relative;
   filter: alpha(opacity=0);
   opacity: 0;
   outline: none;
-  cursor: pointer;
 }
 
-.custom-file-input .custom-file-container {
+.custom-file-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid #ccc;
-  padding: 10px;
+  border: 1px solid #ccc;
   border-radius: 10px;
-  width: 200px;
-  height: 205px;
-  align-items: center;
+  width: 250px;
+  height: 250px;
   justify-content: center;
 }
 
-.custom-file-input .custom-file-container .icon {
+.icon {
   font-size: 30px;
   margin-bottom: 20px;
+}
+
+.custom-file-container:hover {
+  border: 2px solid #4e3c3b;
 }
