--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -84,4 +85,16 @@ body {
 
 .custom-file-container:hover {
   border: 2px solid #4e3c3b;
+}
+
+.checkbox {
+  position: relative;
+  top: 35px;
+  left: 20px;
+  transform: scale(1.5);
+  opacity: 0;
+}
+
+.checkbox:checked {
+  opacity: 1;
 }
