--- a/src/App.css
+++ b/src/App.css
@@ -25,19 +25,17 @@ body {
 
 .gallery {
   padding: 2%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1rem;
 }
 
 .gallery img {
-  width: 200px;
-  height: 200px;
-  margin-bottom: 5%;
+  width: 100%;
+  height: 85%;
   border: 1px solid #dfc7c7;
   border-radius: 8px;
   cursor: pointer;
-  flex-basis: 20%;
 }
 
 .image-box:hover {
@@ -71,10 +69,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 2px dashed #ccc;
+  border: 1px dashed #ccc;
   border-radius: 8px;
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: 210px;
+
   cursor: pointer;
 }
 
