--- a/src/App.css
+++ b/src/App.css
@@ -12,35 +12,44 @@ body {
 .container {
   background-color: white;
   border-radius: 10px;
-  padding: 50px;
+  padding: 30px;
   margin: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .heading {
-  border-bottom: #ccc solid 1px;
-  padding-bottom: 2%;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 1.5%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .gallery {
-  padding: 2%;
+  padding: 1.5%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 1rem;
 }
 
 .gallery img {
-  width: 100%;
-  height: 85%;
   border: 1px solid #dfc7c7;
-  border-radius: 8px;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .image-box:hover {
   filter: brightness(0.4);
   transition: 0.3s ease-in-out;
+}
+
+.image-box:nth-child(1) {
+  grid-column: 1/3;
+  grid-row: 1/3;
 }
 
 .btn {
@@ -61,7 +70,6 @@ body {
   filter: alpha(opacity=0);
   opacity: 0;
   outline: none;
-  margin-right: -200px;
 }
 
 .custom-file-container {
@@ -72,8 +80,7 @@ body {
   border: 1px dashed #ccc;
   border-radius: 8px;
   width: 100%;
-  height: 210px;
-
+  height: 100%;
   cursor: pointer;
 }
 
