--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 20px;
 }
 
 .gallery {
@@ -105,4 +106,39 @@ body {
 .fa-check-square {
   color: rgb(0, 92, 200);
   font-size: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  }
+
+  .image-box {
+    width: 100%;
+    height: 100%;
+  }
+
+  .heading {
+    font-size: 0.9rem;
+    padding-bottom: 5%;
+  }
+
+  .btn {
+    font-size: 0.7rem;
+    padding: 10px;
+  }
+
+  .custom-file-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .checkbox {
+    top: 38px;
+    left: 20px;
+  }
+
+  .fa-check-square {
+    font-size: 17px;
+  }
 }
